[tool.poetry]
name = "dilp"
version = "0.1.0"
description = "A wrapper for the Dicionário Aberto API"
authors = ["Kennedy <kennedyinu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
